--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,196 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  overflow: hidden;
+  background-color: rgb(213, 213, 213);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  padding: 0;
 }
+
+main {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sidebar-toggle {
+  position: fixed;
+  top: 2rem;
+  left: 3rem;
+  font-size: 30px;
+  background-color: transparent;
+  border: none;
+  color: rgb(40, 165, 206);
+  animation: bounce 2s ease-in-out infinite;
+  cursor: pointer;
+}
+
+.btn {
+  height: 2rem;
+  width: 9rem;
+  text-transform: uppercase;
+  background-color: rgb(31, 30, 30);
+  color: #fff;
+  letter-spacing: 1.5px;
+  border-radius: 5px;
+  border: none;
+  padding: 5px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: all 0.3s linear;
+}
+
+.btn:hover {
+  background-color: #fff;
+  color: black;
+  border: 2px solid black;
+}
+
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sidebar {
+  position: fixed;
+  background-color: #fff;
+  top: 0;
+  left: 0;
+  width: 400px;
+  height: 100%;
+  align-items: center;
+  transform: translate(-100%);
+}
+
+.show-sidebar{
+  transform: translate(0);
+}
+
+.sidebar-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 20px 30px;
+}
+
+.times {
+  background-color: transparent;
+  display: flex;
+  border: none;
+  font-size: 25px;
+  align-items: center;
+  cursor: pointer;
+}
+
+ul{
+  color: rgb(72, 87, 108);
+  
+}
+
+li{
+
+  list-style-type: none;
+}
+
+.links li {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: 22px;
+  padding: 20px 25px;
+  cursor: pointer;
+  text-transform: capitalize;
+}
+
+.links li:hover{
+  background-color: grey;
+}
+
+a{
+  text-decoration: none;
+  color: inherit;
+}
+
+
+.links a {
+  margin-left: 13px;
+}
+
+@media(max-width:676px){
+  .sidebar{
+    width: 100%;
+  }
+}
+
+.social-link{
+  position: fixed;
+  bottom: 0.5rem;
+  left: 7rem;
+  display: flex;
+  font-size: 22px;
+}
+
+.social-link li{
+  margin: 8px;
+}
+
+.modal{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: grid;
+  place-items: center;
+  transition: var(--transition);
+  visibility: hidden;
+  z-index: -1;  
+
+}
+
+.modal-container{
+  background-color: #fff;
+  width: 90vw;
+  height: 30vh;
+  text-align: center;
+  max-width: 620px;
+  border-radius: 10px;
+  display: grid;
+  place-items: center;
+  position: relative;
+}
+
+.show-modal{
+  visibility: visible;
+  z-index: 10;
+}
+
+.close-modal-button{
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  background-color: transparent;
+  border: none;
+  font-size: 22px;
+  cursor: pointer;
+
+}
+
